#!/usr/bin/env python
# -*- coding: utf-8 -*-

[metadata]
name = persontitles
version = attr: 0.2.7
description = Collections of academic degrees, job (and peer) titles, and salutations.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = person, titles, degrees
license = MIT license
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX :: Linux
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages =
    degrees
    jobs
    titles
    salutations
scripts =
    src/degrees/academic_austria.py
    src/degrees/academic_degrees.py
    src/degrees/academic_german_drtitel.py
    src/degrees/academic_german.py
    src/degrees/academic_uk.py
    src/degrees/academic_us.py
    src/jobs/gov_jobs.py
    src/jobs/job_titles.py
    src/titles/peertitles.py
    src/titles/rel_titles.py
    src/salutations/salutations.py
install_requires =
    beautifulsoup4
    lxml
    requests

[options.package_data]
* = *.txt, *.json

[options.packages.find]
where=src
exclude = 
    tests/*

[options.data_files]
data = data/*

[options.extras_require]
dev: check-manifest
test: pytest-cov
