[metadata]
name = persontitles
version = 0.3.0
author = Oliver Stapel
author_email = hardy.ecc95@gmail.com
url = https://github.com/0LL13/persontitles
description = Collections of academic degrees, job (and peer) titles, and salutations.
long_description = file: README.rst
keywords = person, titles, degrees
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    ; Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX :: Linux
    Topic :: Other/Nonlisted Topic
; project_urls =
;     Bug Tracker = https://github.com/0LL13/persontitles/issues
;     Source = https://github.com/0LL13/persontitles
 
[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8

[options.packages.find]
where = src

; scripts =
;     src/persontitles/degrees/academic_austria.py
;     src/persontitles/degrees/academic_degrees.py
;     src/persontitles/degrees/academic_german_drtitel.py
;     src/persontitles/degrees/academic_german.py
;     src/persontitles/degrees/academic_uk.py
;     src/persontitles/degrees/academic_us.py
;     src/persontitles/jobs/gov_jobs.py
;     src/persontitles/jobs/job_titles.py
;     src/persontitles/titles/peertitles.py
;     src/persontitles/titles/rel_titles.py
;     src/persontitles/salutations/salutations.py
; install_requires =
;     beautifulsoup4
;     lxml
;     requests
; test_suite = tests
; zip_safe = False
; 
; [options.package_data]
; * = *.txt, *.json
; 
; [bdist_wheel]
; universal = true
; 
; [sdist]
; formats = zip, gztar

; exclude = 
;     tests/*
; 
; [options.data_files]
; data = data/*
; 
; [options.extras_require]
; dev: check-manifest
; test: pytest-cov
